@@ -21,6 +21,11 @@ Version 3.7.0
     [Dagfinn Ilmari Mannsåker]
     (Github issue #30)
 
+  - Add $sth->{pg_async_status} to determine async status of a statement handle.
+    Values can be 0 (no async), 1 (async), or -1 (cancelled
+    [Greg Sabino Mullane, as requested by Dmytro Zagashev (ZDM)]
+    (CPAN ticket #116172)
+
 Version 3.6.2  Released May 23, 2017 (git tag 3.6.2)
 
   - Remove errant debugging aid from test suite
